--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .project/
 bin/
 
+mir/
+connectiqsailing-settings.json
+connectiqsailing.prg
+connectiqsailing.prg.debug.xml
+gen/
+internal-mir/
+developer_key
+build/
+
